# lapce

./: CHANGELOG.md  Cargo.toml  adasdad
.cargo/: config.toml
lapce-app/src/: doc.rs
lapce-app/src/editor/: view.rs
lapce-core/: Cargo.toml
lapce-core/src/: word.rs
lapce-core/src/buffer/: mod.rs  rope_text.rs
lapce-data/: Cargo.toml
lapce-data/src/: command.rs  completion.rs  config.rs  data.rs  document.rs  editor.rs  hover.rs  images.rs  palette.rs  panel.rs  plugin.rs  proxy.rs  rename.rs  selection_range.rs  signature.rs  terminal.rs  update.rs
lapce-data/src/markdown/: layout_content.rs  mod.rs
lapce-proxy/: Cargo.toml
lapce-proxy/src/: buffer.rs  dispatch.rs  lib.rs  watcher.rs
lapce-proxy/src/plugin/: catalog.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
lapce-rpc/: Cargo.toml
lapce-rpc/src/: core.rs  proxy.rs
lapce-ui/: Cargo.toml
lapce-ui/src/: about.rs  app.rs  editor.rs  message.rs  palette.rs  panel.rs  plugin.rs  problem.rs  scroll.rs  signature.rs  tab.rs  terminal.rs
src/: main.rs
src/lapce_core/: Cargo.txt  command.rs  cursor.rs  directory.rs  editor.rs  encoding.rs  indent.rs  language.rs  movement.rs  register.rs  selection.rs  style.rs  word.rs
src/lapce_core/buffer/: mod.rs  rope_text.rs  test.rs
src/lapce_core/syntax/: edit.rs  highlight.rs  mod.rs
src/lapce_data/: about.rs  alert.rs  atomic_soft_tabs.rs  command.rs  completion.rs  config.rs  data.rs  db.rs  document.rs  dropdown.rs  editor.rs  explorer.rs  find.rs  history.rs  hover.rs  images.rs  list.rs  menu.rs  mod.rs  palette.rs  svg.rs
src/lapce_data/keypress/: keypress.rs  loader.rs  mod.rs
src/lapce_data/markdown/: layout_content.rs  mod.rs
src/lapce_proxy/plugin/: catalog.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
src/lapce_proxy/plugin/wasi/: tests.rs
src/lapce_rpc/: buffer.rs  core.rs  plugin.rs  proxy.rs  stdio.rs  terminal.rs
src/lapce_ui/: Cargo.txt  app.rs  mod.rs
src/lapce_ui/editor/: header.rs
