[package]
name = "lapce"
version = "0.2.6"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"

[dependencies]
alacritty_terminal = "0.17.0"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2.17", features = ["derive"] }
crossbeam-channel = "0.5.0"
directories = "4.0.1"
flate2 = "1.0"
hashbrown = { version = "0.12.3", features = ["serde"] }
im = { version = "15.0.0", features = ["serde"] }
include_dir = "0.6.2"
indexmap = { version = "1.9", features = ["serde"] }
interprocess = "1.1.1"
itertools = "0.10.1"
log = "0.4"
notify = { version = "5.0.0", features = ["serde"] }
once_cell = "1.17"
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
rayon = "1.5.1"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
serde = "1.0"
serde_json = "1.0"
smallvec = "1.10.0"
strum = "0.21.0" # follow same version as system-deps in lockfile
strum_macros = "0.21.1" # ditto
tar = "0.4"
thiserror = "1.0"
toml_edit = { version = "0.14.4", features = ["easy"] }
human-sort = { git = "https://github.com/dragazo/human-sort" }
bitflags = "1.3.2"
slotmap = "1.0"
arc-swap = "1.5.1"
sha2 = "0.10.6"
fs_extra = "1.2.0"
sled = "0.34.7"
config = { version = "0.13.2", default-features = false, features = ["toml"] }
fuzzy-matcher = "0.3.7"
uuid = { version = "1.2.2", features = ["v4"] }
structdesc = { git = "https://github.com/lapce/structdesc" }
bytemuck = "1.8.0"
# For parsing markdown data, such as in hovers
pulldown-cmark = "0.9.1"
url = "2.3.1"
jsonrpc-lite = "0.6.0"
image = "0.24.7"
dyn-clone = "1.0.12"

# lapce specific dependencies
lsp-types = { version = "0.93", features = ["proposed"] }
psp-types = { path = "../psp-types" }
lapce-xi-rope = { version = "0.3.1", features = ["serde"] }
druid = { path = "../druid/druid", features = ["svg", "im", "serde"] }

# tree sitter dependencies
tree-sitter = "0.20.7"
tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash", rev = "4488aa41406547e478636a4fcfd24f5bbc3f2f74", optional = true }
tree-sitter-c = { version = "0.20.2", optional = true }
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", rev = "5b60f99545fea00a33bbfae5be956f684c4c69e2", optional = true }
tree-sitter-cpp = { version = "0.20.0", optional = true }
tree-sitter-clojure = { git = "https://github.com/abreumatheus/tree-sitter-clojure", rev = "fdc969eb04fc711e38ad74afe441d74b3b5d3091", optional = true }
tree-sitter-cmake = { version = "0.1.0", optional = true }
# switch to upstream version after this is merged https://github.com/tree-sitter/tree-sitter-css/pull/22
tree-sitter-css = { git = "https://github.com/syntacti/tree-sitter-css", rev = "397aa132b9982fcdd2d473ed69343762a557f10a", optional = true }
tree-sitter-d = {  git = "https://github.com/ghishadow/tree-sitter-d", rev = "36603135ecb37ac6494c520efff91b875815d6f7", optional = true }
tree-sitter-dart = { git = "https://github.com/syntacti/tree-sitter-dart", rev = "78cad4503571d72666f78d5ba8ed6c1417653063", optional = true }
tree-sitter-dockerfile = { git = "https://github.com/panekj/tree-sitter-dockerfile", rev = "c49d819e07685c90456270f1cc654d9cba640f53", optional = true }
tree-sitter-elixir = { git = "https://github.com/elixir-lang/tree-sitter-elixir.git", rev = "05e3631c6a0701c1fa518b0fee7be95a2ceef5e2", optional = true }
tree-sitter-elm = { version = "5.6.0", optional = true }
tree-sitter-erlang = { git = "https://github.com/WhatsApp/tree-sitter-erlang", rev = "a8b8b0e16c4f5552f5e85af3dec976a5d16af8b9", optional = true }
tree-sitter-glimmer = { git = "https://github.com/VixieTSQ/tree-sitter-glimmer", rev = "7281caca2ba114e1960c5d944a37860ef0841426", optional = true }
tree-sitter-glsl = { git = "https://github.com/theHamsta/tree-sitter-glsl", rev = "74329feb2605deccd32b1c644af507daa6fb82f1", optional = true }
tree-sitter-go = { version = "0.19.1", optional = true }
tree-sitter-hare = { version = "0.20.7", optional = true }
tree-sitter-haskell = { git = "https://github.com/tree-sitter/tree-sitter-haskell", rev = "e30bdfd53eb28c73f26a68b77d436fd2140af167", optional = true }
tree-sitter-haxe = { git = "https://github.com/vantreeseba/tree-sitter-haxe", rev = "52e3d2b9c3955aca886bccc38b496ef99b603a09", optional = true }
tree-sitter-hcl = { git = "https://github.com/VixieTSQ/tree-sitter-hcl", rev = "f4aa4553344e03e149ec459549a7f686d6846626", optional = true }
tree-sitter-html = { version = "0.19.0", optional = true }
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java.git", rev = "09d650def6cdf7f479f4b78f595e9ef5b58ce31e", optional = true }
tree-sitter-javascript = { version = "0.20.0", optional = true }
# new version cannot be published on crates.io - https://github.com/tree-sitter/tree-sitter-json/issues/21
# tree-sitter-json = { version = "0.19.0", optional = true }
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", rev = "11e2cc12d9b267766fb11a06e52952792fd8e3f0", optional = true }
tree-sitter-julia = { git = "https://github.com/varlad/tree-sitter-julia.git", rev = "2ad4c9b79e0f213b61dbb3820754bfc6306e595a", optional = true }
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin", rev = "a4f71eb9b8c9b19ded3e0e9470be4b1b77c2b569", optional = true }
tree-sitter-latex = { git = "https://github.com/latex-lsp/tree-sitter-latex", rev = "b3b2cf27f33e71438ebe46934900b1153901c6f2", optional = true }
tree-sitter-lua = { git = "https://github.com/syntacti/tree-sitter-lua", rev = "a29f646c14ed800aaeef1ca58a9bacc6d92922e8", optional = true }
tree-sitter-md = { git = "https://github.com/MDeiml/tree-sitter-markdown.git", rev = "272e080bca0efd19a06a7f4252d746417224959e", optional = true }
tree-sitter-nix = { git = "https://github.com/panekj/tree-sitter-nix", rev = "59fc47150ab437e8bb356c7ab21e9531e87f7cc8", optional = true }
tree-sitter-ocaml = { git = "https://github.com/tree-sitter/tree-sitter-ocaml", rev = "cc26b1ef111100f26a137bcbcd39fd4e35be9a59", optional = true }
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", rev = "ab2e72179ceb8bb0b249c8ac9162a148e911b3dc", optional = true }
tree-sitter-prisma-io = { version = "1.3.0", optional = true }
tree-sitter-protobuf = { git = "https://github.com/yusdacra/tree-sitter-protobuf", rev = "5aef38d655f76a6b0d172340eed3766c93b3124c", optional = true }
tree-sitter-python = { version = "0.20.1", optional = true }
tree-sitter-ql = { git = "https://github.com/tree-sitter/tree-sitter-ql", rev = "bd087020f0d8c183080ca615d38de0ec827aeeaf", optional = true }
tree-sitter-r = { version = "0.19.5", optional = true }
tree-sitter-ruby = { git = "https://github.com/tree-sitter/tree-sitter-ruby.git", rev = "656abef0645caea793e33c1c773570722463e1d8", optional = true }
tree-sitter-rust = { version = "0.20.0", optional = true }
tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme.git", rev = "af0fd1fa452cb2562dc7b5c8a8c55551c39273b9", optional = true }
tree-sitter-scss = { git = "https://github.com/VixieTSQ/tree-sitter-scss", rev = "3aac3391ede5098edbf4cc8a9f6d0cfdfe28e5dc", optional = true }
# switch to upstream version after this is merged  https://github.com/m-novikov/tree-sitter-sql/pull/68
tree-sitter-sql = { git = "https://github.com/oknozor/tree-sitter-sql", rev = "15dad0f3cae8a094a7dac17d712ea8fb25228011", optional = true }
tree-sitter-svelte = { git = "https://github.com/Himujjal/tree-sitter-svelte", rev = "52e122ae68b316d3aa960a0a422d3645ba717f42", optional = true }
tree-sitter-swift = { version = "0.3.4", optional = true }
tree-sitter-toml = { version = "0.20.0", optional = true }
tree-sitter-typescript = { version = "0.20.0", optional = true }
tree-sitter-vue = { version = "0.0.3", optional = true }
tree-sitter-wgsl = { git = "https://github.com/szebniok/tree-sitter-wgsl", rev = "272e89ef2aeac74178edb9db4a83c1ffef80a463", optional = true }
tree-sitter-xml = { git = "https://github.com/RenjiSann/tree-sitter-xml", rev = "422528a43630db6dcc1e222d1c5ee3babd559473", optional = true }
tree-sitter-yaml = { git = "https://github.com/panekj/tree-sitter-yaml", rev = "80c8d76847f03e772c5c524cf29bafb56858a8d1", optional = true }
tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig", rev = "8d3224c3bd0890fe08358886ebf54fca2ed448a6", optional = true }

# wasm
wasmtime = "1.0.0"
wasmtime-wasi = "1.0.0"
wasi-common = "1.0.0"
wasi-experimental-http-wasmtime = { git = "https://github.com/lapce/wasi-experimental-http" }
